# categories-for-programmers

./: mnist_my_sample_transform.ipynb
aux/: html2md.cabal  html2md.hs
book/part-1/1-category-the-essence-of-composition/: original.md
book/part-1/10-natural-transformations/: original.md
book/part-1/2-types-and-functions/: original.md
book/part-1/3-categories-great-and-small/: original.md
book/part-1/4-kleisli-categories/: original.md
book/part-1/5-products-and-coproducts/: original.md
book/part-1/6-simple-algebraic-data-types/: original.md
book/part-1/7-functors/: original.md  translation.md
book/part-1/8-functoriality/: original.md  translation.md
book/part-1/9-function-types/: original.md
book/preface/: original.md
