name:                html2md
version:             0.1.0.0
synopsis:            HTML to MD
license:             GPL-3
author:              Andrew Lelechenko
maintainer:          andrew.lelechenko@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable html2md
  main-is:             html2md.hs
  build-depends:       base >=4 && <5
                     , MissingH
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-type-defaults
